[project]
name = "typy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jgquiroga", email = "jgquiroga@dc.uba.ar" }
]
requires-python = ">=3.13"
dependencies = [
    "argbuilder",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pyrefly>=0.49.0",
    "pyright>=1.1.408",
    "rich>=14.3.1",
    "ty>=0.0.14",
]

[project.scripts]
typy = "typy:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rich>=14.3.1",
]

[tool.uv.sources]
argbuilder = { git = "https://github.com/joangq/argbuilder" }
